# grammaticus

./: .gitignore  README.md  pyproject.toml
data/: nouns.csv
data/nouns/first_declension/: exceptions.csv
grammaticus/: grammar.py  utils.py  verbs.py
grammaticus/languages/latin/: nouns.py
grammaticus/languages/latin/nouns/: common.py  first_declension.py
tests/: nouns_test.py
